# tele-bot1-pay-options

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  acton.ps1  acton.sh  dev-infra.ps1  dev-infra.sh  dev-up.ps1  dev-up.sh  pyproject.toml  railway.json  task.ps1  task.sh  test.ps1  test.sh
apps/api/: config.py  deps.py  error_handlers.py  exceptions.py  health.py  logging_config.py  main.py  middleware.py
apps/bot/: main.py
apps/miniapp/: index.html  package-lock.json  package.json  vite.config.ts
docs/: railway.md
infra/: docker-compose.debug.yml  docker-compose.yml  nginx.conf
infra/db/: README.md  init.sql
infra/docker/: miniapp.Dockerfile  miniapp.prod.Dockerfile  nginx.miniapp.conf.template  python.Dockerfile
infra/railway/: api.toml  bot.toml  miniapp.toml  railpack-api.json  (+1 more)
migrations/: env.py
scripts/: _env.py  acton-deploy-emulation.ps1  acton-deploy-emulation.sh  acton-deploy-testnet.ps1  acton-deploy-testnet.sh  acton-test.ps1  acton-test.sh  acton.ps1  acton.sh  check_order_timestamps.py  db_deploy.py  debug-api.http  dev-infra.ps1  dev-infra.sh  dev-up.ps1  dev-up.sh  list_tables.py  os-run.ps1  os-run.sh  railway_predeploy.py  seed_packages.py  test.ps1  test.sh
tests/: conftest.py  test_api.py  test_health.py  test_market_data.py  test_nowpayments_webhook.py  test_order_history.py  test_order_maintenance.py  test_order_status_ux.py  test_orders.py  test_stars_ton_completion.py  test_telegram_auth.py  test_ton_exact_amount.py  test_ton_payments.py
ton/: Acton.toml  README.md  package-lock.json  package.json
(+34 files in other folders)
